--- a/.github/workflows/pact.yml
+++ b/.github/workflows/pact.yml
@@ -25,12 +25,12 @@ jobs:
     - name: download runtime
       run: bundle exec rake package
     - name: Bundle app for ${{ matrix.os }}
-      run: bundle exec rb2exe pact-broker-app.rb --target=lx64
-      # run: bundle exec rb2exe pact-broker-app.rb --target=lx64 --daemon
+      # run: bundle exec rb2exe pact-broker-app.rb --target=lx64
+      run: bundle exec rb2exe pact-broker-app.rb --target=lx64 --daemon
       if: runner.os == 'Linux'
     - name: Bundle app for ${{ matrix.os }}
-      run: bundle exec rb2exe pact-broker-app.rb --target=ox64
-      # run: bundle exec rb2exe pact-broker-app.rb --target=ox64 --daemon
+      # run: bundle exec rb2exe pact-broker-app.rb --target=ox64
+      run: bundle exec rb2exe pact-broker-app.rb --target=ox64 --daemon
       if: runner.os == 'MacOS'
     - name: Test app
       run: ./pact-broker-app ../ruby/config.ru
