--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,11 +2,13 @@ BUILD_TEST_TASK_TEMPLATE: &BUILD_TEST_TASK_TEMPLATE
   arch_check_script:
     - uname -am
   install_script: bundle install
-  runtime_script: bundle exec rake package
-  # package_script: bundle exec rb2exe pact-broker-app.rb --target=$TARGET
+  runtime_script: bundle exec rake package:$TR_PLATFORM:$TR_ARCH
   package_script: bundle exec rb2exe pact-broker-app.rb --target=$TARGET --daemon
-  test_script: ./pact-broker-app ../ruby/config.ru
-  broker_wait_script: wget -qO- https://raw.githubusercontent.com/eficode/wait-for/4df3f9262d84cab0039c07bf861045fbb3c20ab7/wait-for | sh -s -- localhost:9292 --timeout 60 -- echo "pact broker is up"
+  test_script: | # NOTE:- Cirrus CI/CLI Executors run in seperate shell sessions per test so the app is closed
+    ./pact-broker-app ../ruby/config.ru -P ~/pact_broker.pid
+    wget -qO- https://raw.githubusercontent.com/eficode/wait-for/4df3f9262d84cab0039c07bf861045fbb3c20ab7/wait-for | sh -s -- localhost:9292 -- echo "pact broker is up"
+    curl -v http://localhost:9292
+    cat ~/pact_broker.pid | xargs kill
 
 macos_arm_task: 
   macos_instance:
@@ -14,6 +16,8 @@ macos_arm_task:
   ruby_version_script: ruby --version
   env:
     TARGET: oa64
+    TR_PLATFORM: osx
+    TR_ARCH: arm64
   cirrus_cli_script: |
     chmod +x bin/*
   << : *BUILD_TEST_TASK_TEMPLATE
@@ -37,6 +41,8 @@ macos_arm_task:
 linux_arm_task: 
   env:
     TARGET: la64
+    TR_PLATFORM: linux
+    TR_ARCH: arm64
   arm_container:
     image: ruby:3.2.2-slim
     cpu: 1
